--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "prueba-houm",
+  "name": "prueba-houm1",
   "version": "0.1.0",
+  "homepage": "https://jj-dev18.github.io/houmPrueba/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "gh-pages  -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
